<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnCall"
        style="@style/FerButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call_phone" />

    <Button
        android:id="@+id/btnDetails"
        style="@style/FerButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <Button
        android:id="@+id/btnList"
        style="@style/FerButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list" />

    <Button
        android:id="@+id/btnCamera"
        style="@style/FerButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <Button
        android:id="@+id/btnAssets"
        style="@style/FerButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assets" />

</LinearLayout>